# lz77

./: CMakeLists.txt  README.md  lz77.c  lz77.h  main.c  test.txt  test2.txt
